fixed code style and added line wrap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,7 +30,7 @@
   --secondary-bg-color: #fff;
   --border-color: rgba(0, 0, 0, 0.15);
   --tag-color: #999;
-  --pre-bg-color: #f9f9fd;
+  --pre-bg-color: #ececec;
   --link-color: #0366d7;
 
   --heading-color: #464646;
@@ -525,14 +525,25 @@ header.post-title {
 }
 
 code:not(pre.chroma>code), kbd, tt, var, samp {
-  background-color: var(--bg-color);
-  border: 1px solid var(--border-color);
+  background-color: var(--pre-bg-color);
+  border: 1rem solid var(--pre-bg-color);
   font-family: Inconsolata,monospace;
   -webkit-hyphens: none;
   -moz-hyphens: none;
   -ms-hyphens: none;
   hyphens: none;
   padding: .2rem .5rem;
+  color: var(--chr-def-color)
+}
+
+pre.chroma {
+  background-color: var(--pre-bg-color);
+  border: 1rem solid var(--pre-bg-color);
+  padding: 0 .3rem;
+}
+
+pre.chroma>code {
+  white-space: pre-wrap;
 }
 
 .comments {
